--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-  "name": "template",
-  "version": "0.0.0",
+  "name": "ShipAdvisor",
+  "version": "0.0.1",
   "scripts": {
-    "build": "gulp",
-    "start": "gulp dev"
+    "start": "npm run lite",
+    "lite": "lite-server"
   },
+  "license": "ISC",
   "dependencies": {
-    "angular2": "2.0.0-beta.2",
-    "traceur": "0.0.102",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
-    "rxjs": "5.0.0-beta.0",
-    "zone.js": "0.5.10",
-    "reflect-metadata": "0.1.2",
-    "systemjs": "0.19.6"
+    "@angular/common": "2.0.0-rc.6",
+    "@angular/compiler": "2.0.0-rc.6",
+    "@angular/core": "2.0.0-rc.6",
+    "@angular/forms": "2.0.0-rc.6",
+    "@angular/http": "2.0.0-rc.6",
+    "@angular/platform-browser": "2.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "@angular/router": "3.0.0-rc.2",
+    "@angular/router-deprecated": "2.0.0-rc.2",
+    "@angular/upgrade": "2.0.0-rc.6",
+
+    "core-js": "^2.4.1",
+    "reflect-metadata": "0.1.3",
+    "rxjs": "5.0.0-beta.11",
+    "zone.js": "0.6.17",
+
+    "angular2-in-memory-web-api": "0.0.18",
+    "bootstrap": "^3.3.6"
   },
   "devDependencies": {
-    "gulp": "3.9.0",
-    "gulp-rename": "1.2.2",
-    "gulp-traceur": "0.17.2",
-    "gulp-webserver": "0.9.1"
+    "concurrently": "^2.0.0",
+    "lite-server": "^2.2.0"
   }
 }
