--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,13 +5,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>de.maritime</groupId>
-  <artifactId>application</artifactId>
-  <version>0.1</version>
-  <modules>
-    <module>backend</module>
-    <module>frontend</module>
-  </modules>
+  <artifactId>backend</artifactId>
+  <version>1.0-SNAPSHOT</version>
 
-  <name>ShipAdvisor</name>
 
 </project>
